--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@ body {
 body .wrapper-about {
   width: 100%;
   max-width: 1280px;
-  height: 3595px;
+  height: 2891px;
   background: #fefcf7;
 }
 body .wrapper-about .header-about {
@@ -124,4 +124,210 @@ body .wrapper-about .section .about-section-menu .about-section-menu-p-menu .abo
   /* 162.5% */
   opacity: 0.8;
   margin-top: 32px;
+}
+body .wrapper-about .section-button {
+  max-width: 1280px;
+  height: 1021px;
+  background-color: transparent;
+  margin-top: 344px;
+}
+body .wrapper-about .section-button .section-button-menu {
+  max-width: 1280px;
+  height: 474px;
+  background: #2C343E;
+  border-radius: 10px;
+  background-image: url(../img/coofee-picture.jpg);
+  background-repeat: no-repeat;
+  background-position-x: right;
+}
+body .wrapper-about .section-button .section-button-menu .section-button-min-menu {
+  position: relative;
+  max-width: 1110px;
+  height: 210px;
+  background-color: transparent;
+  margin: 0 auto;
+  top: 100px;
+}
+body .wrapper-about .section-button .section-button-menu .section-button-min-menu .section-button-min-menu-p {
+  max-width: 540px;
+  height: 210px;
+  background-color: transparent;
+}
+body .wrapper-about .section-button .section-button-menu .section-button-min-menu .section-button-min-menu-p .section-button-min-menu-p1 {
+  color: #FEFCF7;
+  font-family: Fraunces 9pt;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 48px;
+  /* 120% */
+}
+body .wrapper-about .section-button .section-button-menu .section-button-min-menu .section-button-min-menu-p .section-button-min-menu-p2 {
+  max-width: 540px;
+  color: #FEFCF7;
+  font-family: Fraunces 9pt;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  /* 120% */
+  opacity: 0.8;
+  margin-top: 32px;
+}
+body .wrapper-about .section-button .countries-form {
+  max-width: 1045px;
+  height: 366px;
+  background-color: transparent;
+  margin: 0 auto;
+  margin-top: 168px;
+}
+body .wrapper-about .section-button .countries-form .countries-form-p1 {
+  max-width: 255px;
+  color: #83888F;
+  font-family: Fraunces 9pt;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 32px;
+  /* 133.333% */
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1045px;
+  height: 262px;
+  background-color: transparent;
+  margin-top: 72px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form1 {
+  max-width: 285px;
+  height: 261.93px;
+  background-color: transparent;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form1 .countries-min-form1-p1 {
+  width: 272px;
+  color: #333D4B;
+  font-family: Fraunces 9pt;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 36px;
+  margin-top: 45px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form1 .countries-min-form1-p2 {
+  width: 285px;
+  color: #333D4B;
+  font-family: Barlow;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 24px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form2 {
+  max-width: 285px;
+  height: 261.93px;
+  background-color: transparent;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form2 .countries-min-form1-p3 {
+  width: 272px;
+  color: #333D4B;
+  font-family: Fraunces 9pt;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 36px;
+  margin-top: 45px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form2 .countries-min-form1-p4 {
+  width: 285px;
+  color: #333D4B;
+  font-family: Barlow;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 24px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form3 {
+  max-width: 285px;
+  height: 261.93px;
+  background-color: transparent;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form3 .countries-min-form1-p5 {
+  width: 272px;
+  color: #333D4B;
+  font-family: Fraunces 9pt;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 36px;
+  margin-top: 45px;
+}
+body .wrapper-about .section-button .countries-form .countries-min-forms .countries-min-form3 .countries-min-form1-p6 {
+  width: 285px;
+  color: #333D4B;
+  font-family: Barlow;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 24px;
+}
+body .wrapper-about footer {
+  width: 100%;
+  max-width: 1280px;
+  height: 208px;
+  margin-top: 200px;
+  display: flex;
+  align-items: center;
+}
+body .wrapper-about footer nav {
+  width: 100%;
+  max-width: 1280px;
+  height: 120px;
+  padding: 47px 85px 39px 85px;
+  background: #2C343E;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body .wrapper-about footer nav .navigation-footer {
+  margin-left: -120px;
+}
+body .wrapper-about footer nav .navigation-footer ul {
+  display: flex;
+}
+body .wrapper-about footer nav .navigation-footer ul li {
+  display: flex;
+  margin-right: 33px;
+}
+body .wrapper-about footer nav .navigation-footer ul li a {
+  color: #83888F;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.92px;
+  font-family: "Barlow", sans-serif;
+}
+body .wrapper-about footer nav .navigation-footer ul li a:hover {
+  transition: 0.1s;
+  color: #FEFCF7;
+}
+body .wrapper-about footer nav .navigation-footer ul li:nth-child(2) {
+  margin-right: 32px;
+}
+body .wrapper-about footer nav .navigation-footer ul li:nth-child(3) {
+  margin-right: 0;
+}
+body .wrapper-about footer nav .icons .icon-style {
+  color: #FEFCF7;
+  font-size: 19.5px;
+  margin-left: 19px;
+}
+body .wrapper-about footer nav .icons .icon-style:hover {
+  transition: 0.5s;
+  color: #FDD6BA;
 }/*# sourceMappingURL=about.css.map */
