--- a/scss/about.scss
+++ b/scss/about.scss
@@ -12,7 +12,7 @@ body {
   .wrapper-about {
     width: 100%;
     max-width: 1280px;
-    height: 3595px;
+    height: 2891px;
     background: #fefcf7;
 
 
@@ -145,5 +145,247 @@ body {
       }
     }
 
+    .section-button {
+      max-width: 1280px;
+      height: 1021px;
+      background-color: transparent;
+      margin-top: 344px;
+
+      .section-button-menu {
+        max-width: 1280px;
+        height: 474px;
+        background: #2C343E;
+        border-radius: 10px;
+        background-image: url(../img/coofee-picture.jpg);
+        background-repeat: no-repeat;
+        background-position-x: right;
+
+
+        .section-button-min-menu {
+          // display: flex;
+          // justify-content: end;
+          position: relative;
+          max-width: 1110px;
+          height: 210px;
+          background-color: transparent;
+          margin: 0 auto;
+          top: 100px;
+
+          .section-button-min-menu-p {
+            max-width: 540px;
+            height: 210px;
+            background-color: transparent;
+
+            .section-button-min-menu-p1 {
+              color: #FEFCF7;
+              font-family: Fraunces 9pt;
+              font-size: 40px;
+              font-style: normal;
+              font-weight: 900;
+              line-height: 48px;
+              /* 120% */
+            }
+
+            .section-button-min-menu-p2 {
+              max-width: 540px;
+              color: #FEFCF7;
+              font-family: Fraunces 9pt;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 26px;
+              /* 120% */
+              opacity: 0.8;
+              margin-top: 32px;
+            }
+          }
+        }
+      }
+
+      .countries-form {
+        max-width: 1045px;
+        height: 366px;
+        background-color: transparent;
+        margin: 0 auto;
+        margin-top: 168px;
+
+        .countries-form-p1 {
+          max-width: 255px;
+          color: #83888F;
+          font-family: Fraunces 9pt;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 900;
+          line-height: 32px;
+          /* 133.333% */
+        }
+
+        .countries-min-forms {
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          max-width: 1045px;
+          height: 262px;
+          background-color: transparent;
+          margin-top: 72px;
+
+          .countries-min-form1 {
+            max-width: 285px;
+            height: 261.93px;
+            background-color: transparent;
+
+            .countries-min-form1-p1 {
+              width: 272px;
+              color: #333D4B;
+              font-family: Fraunces 9pt;
+              font-size: 32px;
+              font-style: normal;
+              font-weight: 900;
+              line-height: 36px;
+              margin-top: 45px;
+            }
+
+            .countries-min-form1-p2 {
+              width: 285px;
+              color: #333D4B;
+              font-family: Barlow;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 26px;
+              margin-top: 24px;
+            }
+          }
+          .countries-min-form2 {
+            max-width: 285px;
+            height: 261.93px;
+            background-color: transparent;
+
+            .countries-min-form1-p3 {
+              width: 272px;
+              color: #333D4B;
+              font-family: Fraunces 9pt;
+              font-size: 32px;
+              font-style: normal;
+              font-weight: 900;
+              line-height: 36px;
+              margin-top: 45px;
+            }
+
+            .countries-min-form1-p4 {
+              width: 285px;
+              color: #333D4B;
+              font-family: Barlow;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 26px;
+              margin-top: 24px;
+            }
+          }
+          .countries-min-form3 {
+            max-width: 285px;
+            height: 261.93px;
+            background-color: transparent;
+
+            .countries-min-form1-p5 {
+              width: 272px;
+              color: #333D4B;
+              font-family: Fraunces 9pt;
+              font-size: 32px;
+              font-style: normal;
+              font-weight: 900;
+              line-height: 36px;
+              margin-top: 45px;
+            }
+
+            .countries-min-form1-p6 {
+              width: 285px;
+              color: #333D4B;
+              font-family: Barlow;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 26px;
+              margin-top: 24px;
+            }
+          }
+        }
+      }
+    }
+    footer {
+      width: 100%;
+      max-width: 1280px;
+      height: 208px;
+
+      margin-top: 200px;
+
+      display: flex;
+      align-items: center;
+
+      nav {
+        width: 100%;
+        max-width: 1280px;
+        height: 120px;
+
+        padding: 47px 85px 39px 85px;
+        background: #2C343E;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .navigation-footer {
+          margin-left: -120px;
+
+          ul {
+            display: flex;
+
+            li {
+              display: flex;
+              margin-right: 33px;
+
+              a {
+                color: #83888F;
+                text-decoration: none;
+                font-weight: 700;
+                font-size: 12px;
+                line-height: 15px;
+                letter-spacing: 0.92px;
+
+                font-family: 'Barlow', sans-serif;
+              }
+
+              a:hover {
+                transition: 0.1s;
+                color: #FEFCF7;
+              }
+            }
+
+            li:nth-child(2) {
+              margin-right: 32px;
+            }
+
+            li:nth-child(3) {
+              margin-right: 0;
+            }
+          }
+        }
+
+        .icons {
+          .icon-style {
+            color: #FEFCF7;
+            font-size: 19.5px;
+
+            margin-left: 19px;
+
+            &:hover {
+              transition: 0.5s;
+              color: #FDD6BA;
+            }
+          }
+        }
+      }
+    }
   }
 }
